# Reflection.Tryouts

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE.md
examples_on_proposals/P2996/: CMakeLists.txt  a-simple-tuple-type.cpp  a-simple-variant-type.cpp  back-and-forth.cpp  compile-time-ticket-counter.cpp  enum-to-string-with-algorithms.cpp  enum-to-string.cpp  getting-class-layout.cpp  list-of-types-to-list-of-sizes.cpp  make-integer-sequence.cpp  parsing-commandline-options-2.cpp  parsing-commandline-options.cpp  selecting-members-by-name-with-metafunctions.cpp  selecting-members-with-metafunctions.cpp  selecting-members.cpp  struct-to-struct-of-arrays.cpp  universal-formatter.cpp
examples_on_proposals/P3096/: CMakeLists.txt  parameters_of.cpp
