add_executable(back-and-forth back-and-forth.cpp)
add_executable(selecting-members selecting-members.cpp)

add_executable(selecting-members-with-metafunctions
               selecting-members-with-metafunctions.cpp)

add_executable(selecting-members-by-name-with-metafunctions
               selecting-members-by-name-with-metafunctions.cpp)

add_executable(list-of-types-to-list-of-sizes
               list-of-types-to-list-of-sizes.cpp)

add_executable(make-integer-sequence make-integer-sequence.cpp)

add_executable(getting-class-layout getting-class-layout.cpp)
add_executable(enum-to-string enum-to-string.cpp)
add_executable(enum-to-string-with-algorithms
               enum-to-string-with-algorithms.cpp)

add_executable(parsing-commandline-options parsing-commandline-options.cpp)
add_executable(parsing-commandline-options-2 parsing-commandline-options-2.cpp)
add_executable(a-simple-tuple-type a-simple-tuple-type.cpp)
add_executable(universal-formatter universal-formatter.cpp)
add_executable(compile-time-ticket-counter compile-time-ticket-counter.cpp)
